Post body type added

--- a/css/colors.less
+++ b/css/colors.less
@@ -1,4 +1,9 @@
-@altx-black: #000;
+@black: #000;
+@off-white: #f5f5f5;
+
+
+@body-bg: @off-white;
+@altx-black: @black;
 @altx-grey: #808080;
 @altx-orange: #EA7600;
 @altx-yellow: #F1B434;
