Change link colors in body copy

--- a/css/main.less
+++ b/css/main.less
@@ -29,10 +29,15 @@ main{
 	}
 	
 	a{
-		color: @black;
+		color: @altx-orange;
+		text-decoration: none;
 		
 		&:hover{
-			color: @altx-orange;
+			text-decoration: underline;
+		}
+		
+		&:visited{
+			color: @altx-red;
 		}
 	}
 }
