--- a/css/main.less
+++ b/css/main.less
@@ -1,9 +1,56 @@
 @import (inline) "reset.css";
 @import (reference) "colors";
+
 body, html{
 	background: @body-bg;
 	font-size: 10px;
 }
+
+header{
+	background: @white;
+	border-bottom: 1px solid @altx-grey;
+	box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.15);
+	margin: 0 0 30px;
+	overflow: auto;
+	
+	.logo-image{
+		float: left;
+	}
+	
+	#top-menu{
+		float: left;
+	}
+}
+
+#top-menu{
+	margin: 30px 0 0 70px;
+	
+	li{
+		
+		display: block;
+		font-size: 2rem;
+		float: left;
+		margin: 0 5px;
+		
+		a{
+			border: 1px solid @off-white;
+			color: @black;
+			font-family: "Source Sans Pro";
+			height: 100%;
+			line-height: 2;
+			padding: 5px 10px;
+			text-decoration: none;
+			Width: 100%;
+			
+			&:hover{
+				background: @altx-red;
+				border: 1px solid @altx-red;
+				color: @white;
+			}			
+		}
+	}
+}
+
 main{
 	font-family: "Source Sans Pro";
 	max-width: 1000px;
@@ -16,6 +63,7 @@ main{
 	}
 	
 	h3{
+		color: @altx-red;
 		font-family: "Source Sans Pro Light";
 		font-size: 2.4rem;
 	}
@@ -43,7 +91,7 @@ main{
 }
 
 .post-title{
-	border-bottom: 1px solid @black;
+	border-bottom: 1px solid @altx-grey;
 	margin: 0 0 20px;
 	padding: 0 0 5px;
 }
