POst footer thumbs up

--- a/css/main.less
+++ b/css/main.less
@@ -95,3 +95,15 @@ main{
 	margin: 0 0 20px;
 	padding: 0 0 5px;
 }
+
+footer{
+	background: @altx-red;
+	color: @white;
+	padding: 5px 0;
+	font-family: "Source Sans Pro";
+	
+	p{
+		font-size: 1.7rem;
+		text-align: center;
+	}
+}
