--- a/css/main.less
+++ b/css/main.less
@@ -12,11 +12,11 @@ header{
 	box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.15);
 	margin: 0 0 30px;
 	overflow: auto;
-	
+
 	.logo-image{
 		float: left;
 	}
-	
+
 	#top-menu{
 		float: left;
 	}
@@ -24,14 +24,14 @@ header{
 
 #top-menu{
 	margin: 30px 0 0 70px;
-	
+
 	li{
-		
+
 		display: block;
 		font-size: 2rem;
 		float: left;
 		margin: 0 5px;
-		
+
 		a{
 			border: 1px solid @off-white;
 			color: @black;
@@ -41,12 +41,12 @@ header{
 			padding: 5px 10px;
 			text-decoration: none;
 			Width: 100%;
-			
+
 			&:hover{
 				background: @altx-red;
 				border: 1px solid @altx-red;
 				color: @white;
-			}			
+			}
 		}
 	}
 }
@@ -55,53 +55,44 @@ main{
 	font-family: "Source Sans Pro";
 	max-width: 1000px;
 	margin: 0 auto;
-	
+
 	h1{
 		font-size: 4.5rem;
 		font-weight: bold;
 		margin: 5px 0 3px;
 	}
-	
-	h3{
-		color: @altx-red;
-		font-family: "Source Sans Pro Light";
-		font-size: 2.4rem;
-	}
-	
+
 	p{
 		font-family: "Source Sans Pro Light";
 		font-size: 2.2rem;
 		font-weight: 400;
 		line-height: 1.3;
-		margin: 0 0 50px;		
+		margin: 0 0 50px;
 	}
-	
+
 	a{
 		color: @altx-orange;
 		text-decoration: none;
-		
+
 		&:hover{
 			text-decoration: underline;
 		}
-		
+
 		&:visited{
 			color: @altx-red;
 		}
 	}
 }
 
-.post-title{
-	border-bottom: 1px solid @altx-grey;
-	margin: 0 0 20px;
-	padding: 0 0 5px;
-}
+@import "post";
+@import "listing";
 
 footer{
 	background: @altx-red;
 	color: @white;
 	padding: 5px 0;
 	font-family: "Source Sans Pro";
-	
+
 	p{
 		font-size: 1.7rem;
 		text-align: center;
